modificaciones para Pf

--- a/pages/menu 2.html
+++ b/pages/menu 2.html
@@ -4,33 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Optica Maack</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
-<link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
-<link href = "https: //fonts.googleapis.com/css2? family = Questrial & display = swap "rel =" stylesheet ">
-<link rel = "preconnect" href = "https://fonts.googleapis.com">
-<link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
-<link href = "https: //fonts.googleapis.com/css2? family = Manjari & display = swap "rel =" stylesheet ">
+    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+    <link href = "https: //fonts.googleapis.com/css2? family =  Questrial & display = swap "rel =" stylesheet ">
+    <link rel = "preconnect" href = "https://fonts.googleapis.com">
+    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+    <link href = "https: //fonts.googleapis.com/css2? family = Manjari & display = swap "rel =" stylesheet ">
     <link rel="shortcut icon" href="../media/favicon.icon.ico">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <title>Optica Maack</title>
 </head>
 <body>
-    <header>
-        <div>
-            <img src="../media/LOGO png.png" width="200"> 
-           </div>
-         <form  method="post"> 
-             <input class="button"  type="text" placeholder="Buscar">
-            <input class="Buscar" type="button" value="Buscar">
-         </form>
-            <div class="icons">
-                <img src="../media/usuario.png" width="50" alt="">
-                <img src="../media/carrito.png" width="50" alt="">
-            </div>
-        
-    </header>  
+    <header class="container-fluid">
+        <nav class="navbar navbar-light">
+          <div>
+            <a class="navbar-brand" href="../index.html">
+              <img src="../media/LOGO png.png" alt="" width="170">
+            </a>
+          </div>
+        </nav>
+        <nav class="navbar navbar-light">
+          <div class="container-fluid">
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-light" 
+                type="submit">Buscar</button>
+            </form>
+          </div>
+        </nav>
+         <div class="icons">
+             <img src="../media/usuario.png" width="50" alt="">
+             <img src="../media/carrito.png" width="50" alt="">
+         </div>
+      </header>
     <main>
-        <div><a href="../index.html">Volver al inicio</a></div>
         <h1>Anteojos Receta</h1>
         <hr>
         <!--comienza catalogo de damas-->
@@ -42,7 +50,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/vivm.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Clara</p>
@@ -58,7 +65,6 @@
                      <a href="#">
                          <div class="img-container" >
                              <img src="../media/sarkm.jpg" alt="">
- 
                          </div>
                       </a>
                          <p>ART Sofia</p>
@@ -74,7 +80,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/krm.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Clara</p>
@@ -90,7 +95,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/carolinam.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Vita</p>
@@ -106,7 +110,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/carolina2m.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Liberté</p>
@@ -122,7 +125,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/gurum.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Blaqué</p>
@@ -138,7 +140,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/kr2m.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Malbec</p>
@@ -154,7 +155,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/maniacm.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Delfina</p>
@@ -170,7 +170,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/piazza.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Julieta</p>
@@ -190,7 +189,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/glox.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Victor</p>
@@ -206,7 +204,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/glox2m.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Hero</p>
@@ -222,7 +219,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/gloxh.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Hercules</p>
@@ -238,7 +234,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/wdh.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Hades</p>
@@ -254,7 +249,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/tascani h.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Hercules</p>
@@ -270,7 +264,6 @@
                     <a href="#">
                         <div class="img-container" >
                             <img src="../media/clipon.jpg" alt="">
-
                         </div>
                      </a>
                         <p>ART Apolo</p>
@@ -290,8 +283,7 @@
                 <a href="https://es-la.facebook.com/pages/category/Medical-Center/Optica-Maack-1828339897480603/"
                 target="blank">Facebook</a>
                     <div><img src="../media/redes.jpg" width="80" alt=""></div>
-        </section>
-        
+        </section>       
          <section class="pagos" >
              <h4>Medios de pago</h4>
 
@@ -299,5 +291,7 @@
         </div>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
