--- a/pages/menu 3.html
+++ b/pages/menu 3.html
@@ -4,33 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Optica Maack</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
-<link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
-<link href = "https: //fonts.googleapis.com/css2? family = Questrial & display = swap "rel =" stylesheet ">
-<link rel = "preconnect" href = "https://fonts.googleapis.com">
-<link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
-<link href = "https: //fonts.googleapis.com/css2? family = Manjari & display = swap "rel =" stylesheet ">
+    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+    <link href = "https: //fonts.googleapis.com/css2? family = Questrial & display = swap "rel =" stylesheet ">
+    <link rel = "preconnect" href = "https://fonts.googleapis.com">
+    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+    <link href = "https: //fonts.googleapis.com/css2? family = Manjari & display = swap "rel =" stylesheet ">
     <link rel="shortcut icon" href="../media/favicon.icon.ico">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <title>Optica Maack</title>
 </head>
 <body>
-    <header>
-        <div>
-            <img src="../media/LOGO png.png" width="200"> 
-           </div>
-         <form  method="post"> 
-             <input class="button"  type="text" placeholder="Buscar">
-            <input class="Buscar" type="button" value="Buscar">
-         </form>
-            <div class="icons">
-                <img src="../media/usuario.png" width="50" alt="">
-                <img src="../media/carrito.png" width="50" alt="">
-            </div>
-        
-    </header>  
+    <header class="container-fluid">
+        <nav class="navbar navbar-light">
+          <div>
+            <a class="navbar-brand" href="../index.html">
+              <img src="../media/LOGO png.png" width="170">
+            </a>
+          </div>
+        </nav>
+        <nav class="navbar navbar-light">
+          <div class="container-fluid">
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-light" 
+                type="submit">Buscar</button>
+            </form>
+          </div>
+        </nav>
+         <div class="icons">
+             <img src="../media/usuario.png" width="50">
+             <img src="../media/carrito.png" width="50">
+         </div>
+    </header>
     <main>
-        <div><a href="../index.html">Volver al inicio</a></div>
         <h1>Lentes de Contacto</h1>
         <div class="galery">
         <section class="estilo">
@@ -38,7 +46,7 @@
                 <div class="card" >
                     <a href="#">
                         <div class="img-container" >
-                            <img src="../media/cosmeticas.jpg" alt="">
+                            <img src="../media/cosmeticas.jpg">
 
                         </div>
                      </a>
@@ -54,8 +62,7 @@
                 <div class="card" >
                     <a href="#">
                         <div class="img-container" >
-                            <img src="../media/acuvue.jpg" alt="">
-
+                            <img src="../media/acuvue.jpg">
                         </div>
                      </a>
                         <p>Lentes ACUVUE TORICAS/ESFERICAS
@@ -72,8 +79,7 @@
                 <div class="card" >
                     <a href="#">
                         <div class="img-container" >
-                            <img src="../media/airopt.jpg" alt="">
-
+                            <img src="../media/airopt.jpg">
                         </div>
                      </a>
                         <p>Lentes AIROPTIX TORICAS/ESFERICAS 
@@ -90,8 +96,7 @@
                 <div class="card" >
                     <a href="#">
                         <div class="img-container" >
-                            <img src="../media/lc diaria.jpg" alt="">
-
+                            <img src="../media/lc diaria.jpg">
                         </div>
                      </a>
                         <p>Lentes de contacto diarias</p>
@@ -106,8 +111,7 @@
                 <div class="card" >
                     <a href="#">
                         <div class="img-container" >
-                            <img src="../media/lentillas-soflens-multifocal1_2.jpg" alt="">
-
+                            <img src="../media/lentillas-soflens-multifocal1_2.jpg">
                         </div>
                      </a>
                         <p>Lentes Multifocales</p>
@@ -122,8 +126,7 @@
                 <div class="card" >
                     <a href="#">
                         <div class="img-container" >
-                            <img src="../media/waicon.jpg" alt="">
-
+                            <img src="../media/waicon.jpg">
                         </div>
                      </a>
                         <p>Lentes waicon
@@ -140,8 +143,7 @@
                 <div class="card" >
                     <a href="#">
                         <div class="img-container" >
-                            <img src="../media/softlens.jpg" alt="">
-
+                            <img src="../media/softlens.jpg">
                         </div>
                      </a>
                         <p>Lentes Softlens</p>
@@ -156,8 +158,7 @@
                 <div class="card" >
                     <a href="#">
                         <div class="img-container" >
-                            <img src="../media/multiuso.jpg" alt="">
-
+                            <img src="../media/multiuso.jpg">
                         </div>
                      </a>
                         <p>Solucion multiuso</p>
@@ -172,8 +173,7 @@
                 <div class="card" >
                     <a href="#">
                         <div class="img-container" >
-                            <img src="../media/multiu.jpg" alt="">
-
+                            <img src="../media/multiu.jpg">
                         </div>
                      </a>
                         <p>solucion multiuso</p>
@@ -188,8 +188,7 @@
                 <div class="card" >
                     <a href="#">
                         <div class="img-container" >
-                            <img src="../media/multi.jpg" alt="">
-
+                            <img src="../media/multi.jpg">
                         </div>
                      </a>
                         <p>solucion multiuso</p>
@@ -203,8 +202,7 @@
                 <div class="card" >
                     <a href="#">
                         <div class="img-container" >
-                            <img src="../media/arlyt1.jpg" alt="">
-
+                            <img src="../media/arlyt1.jpg">
                         </div>
                      </a>
                         <p>lagrima lubricante</p>
@@ -218,8 +216,7 @@
                 <div class="card" >
                     <a href="#">
                         <div class="img-container" >
-                            <img src="../media/lagrima1.jpg" alt="">
-
+                            <img src="../media/lagrima1.jpg" >
                         </div>
                      </a>
                         <p>Lagrima Lubricante</p>
@@ -230,8 +227,6 @@
             </div>
          </section>
         </div>
-
-
     </main>
     <footer>
         <section class="redes">
@@ -240,9 +235,10 @@
                 target="blank">Instagram</a>  
                 <a href="https://es-la.facebook.com/pages/category/Medical-Center/Optica-Maack-1828339897480603/"
                 target="blank">Facebook</a>
-                    <div><img src="../media/redes.jpg" width="80" alt=""></div>
+                    <div>
+                        <img src="../media/redes.jpg" width="80">
+                    </div>
         </section>
-        
          <section class="pagos" >
              <h4>Medios de pago</h4>
 
@@ -250,5 +246,7 @@
         </div>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
