--- a/pages/menu 5.html
+++ b/pages/menu 5.html
@@ -4,34 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Optica Maack</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
-<link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
-<link href = "https: //fonts.googleapis.com/css2? family = Questrial & display = swap "rel =" stylesheet ">
-<link rel = "preconnect" href = "https://fonts.googleapis.com">
-<link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
-<link href = "https: //fonts.googleapis.com/css2? family = Manjari & display = swap "rel =" stylesheet ">
+    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+    <link href = "https: //fonts.googleapis.com/css2? family = Questrial & display = swap "rel =" stylesheet ">
+    <link rel = "preconnect" href = "https://fonts.googleapis.com">
+    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+    <link href = "https: //fonts.googleapis.com/css2? family = Manjari & display = swap "rel =" stylesheet ">
     <link rel="shortcut icon" href="../media/favicon.icon.ico">
-    <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" href="../estilos/estilos.css">  <title>Optica Maack</title>
 </head>
 <body>
-    <header>
-        <div>
-            <img src="../media/LOGO png.png" width="200"> 
-           </div>
-         <form  method="post"> 
-             <input class="button"  type="text" placeholder="Buscar">
-            <input class="Buscar" type="button" value="Buscar">
-         </form>
-            <div class="icons">
-                <img src="../media/usuario.png" width="50" alt="">
-                <img src="../media/carrito.png" width="50" alt="">
-            </div>
-    </header>
+    <header class="container-fluid">
+        <nav class="navbar navbar-light">
+          <div>
+            <a class="navbar-brand" href="../index.html">
+              <img src="../media/LOGO png.png" width="170">
+            </a>
+          </div>
+        </nav>
+        <nav class="navbar navbar-light">
+          <div class="container-fluid">
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-light" 
+                type="submit">Buscar</button>
+            </form>
+          </div>
+        </nav>
+         <div class="icons">
+             <img src="../media/usuario.png" width="50">
+             <img src="../media/carrito.png" width="50">
+         </div>
+      </header>
     <main>
-        <div><a href="../index.html">Volver al inicio</a></div>
         <section>
-
             <h2>Contactanos</h2>
             <form >
                 <fieldset class="formulario">
@@ -72,7 +79,7 @@
 
                     <div>
                         <label for="message">Dejanos tu mensaje</label> <br>
-                       <textarea name="message" id="" cols="30" rows="10" placeholder="Escribe aqui"></textarea>
+                       <textarea name="message" cols="30" rows="10" placeholder="Escribe aqui"></textarea>
                     </div>
                     <br>
                     <div>
@@ -82,7 +89,6 @@
                 </fieldset>
             </form>
         </section>
-
     </main>
     <footer>
         <section>
@@ -91,15 +97,18 @@
                 target="blank">Instagram</a>  
                 <a href="https://es-la.facebook.com/pages/category/Medical-Center/Optica-Maack-1828339897480603/"
                 target="blank">Facebook</a>
-                    <div><img src="../media/redes.jpg" width="80" alt=""></div>
+                    <div>
+                        <img src="../media/redes.jpg" width="80">
+                    </div>
         </section>
-        
          <section class="pagos" >
              <h4>Medios de pago</h4>
 
-         <div><img src="../media/medios de pago.jpg" width="100" alt="">
+         <div><img src="../media/medios de pago.jpg" width="100">
         </div>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
